force-app/main/default/objects/Portal_button_configuration__mdt/Portal_button_configuration__mdt.object-meta.xml
<CustomObject>
    <description>Combines styling, action and visibility setting into one configuration.</description>
    <label>Portal button configuration</label>
    <pluralLabel>Portal button configurations</pluralLabel>
</CustomObject>