force-app/main/default/objects/Portal_button_configuration__mdt/fields/Action__c.field-meta.xml
<CustomField>
    <fullName>Action__c</fullName>
    <label>Action</label>
    <referenceTo>Portal_button_action__mdt</referenceTo>
    <relationshipLabel>Portal button configurations</relationshipLabel>
    <relationshipName>Portal_button_configurations</relationshipName>
    <type>MetadataRelationship</type>
</CustomField>