force-app/main/default/objects/Portal_button_configuration__mdt/fields/Approval_process_name__c.field-meta.xml
<CustomField>
    <fullName>Approval_process_name__c</fullName>
    <description>If type is &apos;Approval process&apos; or &apos;Approval start&apos;, supply the API name of the approval process here.</description>
    <inlineHelpText>If type is &apos;Approval process&apos; or &apos;Approval start&apos;, supply the API name of the approval process here.</inlineHelpText>
    <label>Approval process name</label>
    <length>180</length>
    <type>Text</type>
</CustomField>