force-app/main/default/objects/Portal_button_configuration__mdt/fields/Approver_contact_field__c.field-meta.xml
<CustomField>
    <fullName>Approver_contact_field__c</fullName>
    <description>Specify the field api name that contains the contact responsible for approvals, can stretch multiple relationships</description>
    <inlineHelpText>Specify the field api name that contains the contact responsible for approvals, can stretch multiple relationships</inlineHelpText>
    <label>Approver contact field</label>
    <length>180</length>
    <type>Text</type>
</CustomField>