force-app/main/default/objects/Portal_button_configuration__mdt/fields/Approver_default_vendor__c.field-meta.xml
<CustomField>
    <fullName>Approver_default_vendor__c</fullName>
    <defaultValue>false</defaultValue>
    <description>If manual chosen approver is default vendor contact AND the field on this object to get the vendor account is called Vendor__c, select this option</description>
    <inlineHelpText>If manual chosen approver is default vendor contact AND the field on this object to get the vendor account is called Vendor__c, select this option</inlineHelpText>
    <label>Approver default vendor</label>
    <type>Checkbox</type>
</CustomField>