force-app/main/default/objects/Portal_button_configuration__mdt/fields/Manually_selected_approver__c.field-meta.xml
<CustomField>
    <fullName>Manually_selected_approver__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Check this box if the approver needs to be gotten from a contact field reachable from this record and specify the field api name in &apos;Approver contact field&apos;</description>
    <inlineHelpText>Check this box if the approver needs to be gotten from a contact field reachable from this record and specify the field api name in &apos;Approver contact field&apos;</inlineHelpText>
    <label>Manually selected approver</label>
    <type>Checkbox</type>
</CustomField>