force-app/main/default/objects/Portal_button_configuration__mdt/fields/Styling__c.field-meta.xml
<CustomField>
    <fullName>Styling__c</fullName>
    <label>Styling</label>
    <referenceTo>Portal_button_styling__mdt</referenceTo>
    <relationshipLabel>Portal button configurations</relationshipLabel>
    <relationshipName>Portal_button_configurations</relationshipName>
    <type>MetadataRelationship</type>
</CustomField>