force-app/main/default/objects/Portal_button_configuration__mdt/fields/Task_owner_field__c.field-meta.xml
<CustomField>
    <fullName>Task_owner_field__c</fullName>
    <description>If a task is going to be made, fill out the field that holds the task owner here</description>
    <inlineHelpText>If a task is going to be made, fill out the field that holds the task owner here</inlineHelpText>
    <label>Task owner field</label>
    <length>250</length>
    <type>Text</type>
</CustomField>