force-app/main/default/objects/Portal_button_configuration__mdt/fields/Task_type__c.field-meta.xml
<CustomField>
    <fullName>Task_type__c</fullName>
    <description>Options need to match Type__c field on task</description>
    <inlineHelpText>Options need to match Type__c field on task</inlineHelpText>
    <label>Task type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>placement_request</fullName>
                <default>true</default>
                <label>placement_request</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>