force-app/main/default/objects/Portal_button_configuration__mdt/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Default</fullName>
                <default>true</default>
                <label>Default</label>
            </value>
            <value>
                <fullName>Approval start</fullName>
            </value>
            <value>
                <fullName>Approval approve reject</fullName>
            </value>
            <value>
                <fullName>Approval recall</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>