force-app/main/default/objects/Portal_button_configuration__mdt/fields/Visibility__c.field-meta.xml
<CustomField>
    <fullName>Visibility__c</fullName>
    <label>Visibility</label>
    <referenceTo>Portal_button_visibility__mdt</referenceTo>
    <relationshipLabel>Portal button configurations</relationshipLabel>
    <relationshipName>Portal_button_configurations</relationshipName>
    <type>MetadataRelationship</type>
</CustomField>